--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                       </p>
                       
                       <h5 class="name">
-                        M. Reza
+                        Ms.King
                       </h5>
                       <img alt="signature" src="images/signature.png">
                     </div>
@@ -144,12 +144,12 @@
                           <tr>
                             <td class="title">Name </td>
                             <td class="break">:</td>
-                            <td> M. Reza</td>
+                            <td> Ms.King</td>
                           </tr>
                           <tr>
                             <td class="title">Phone </td>
                             <td class="break">:</td>
-                            <td> +62 8678 999 012</td>
+                            <td> +86 8888 999 123</td>
                           </tr>
                           <tr>
                             <td class="title">Email </td>
@@ -912,7 +912,7 @@
           <div class="footer-bottom">
             <div class="container">
               <div class="row">
-                <img src="images/logo-bottom.png" alt="logo bottom" class="center-block" />More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
+                <img src="images/logo-bottom.png" alt="logo bottom" class="center-block" /> 
               </div>
             </div>
           </div>
